[package]
name = "codegang-datasource"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-web-lab = "0.22"
async-stream = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }
